# lib2mcp

./: README.md  SUMMARY_REPORT.md  auto_generate_mcp.py  config.yaml  pyproject.toml  requirements.txt
docs/: project_structure.md  usage_guide.md
examples/: demonstrate_functionality.py  final_demo.py  show_network_analysis.py
generators/: auto_generate_mcp.py
generators/Matplotlib_mcp/: matplotlib_cherry_config.json
generators/Matplotlib_mcp/tools/: matplotlib_manifest.json  matplotlib_stats.json
generators/arcpy_mcp/: arcpy_cherry_config.json
generators/arcpy_mcp/tools/: arcpy_manifest.json  arcpy_stats.json
generators/numpy_mcp/: numpy_cherry_config.json
generators/numpy_mcp/tools/: numpy_manifest.json  numpy_stats.json
output/collections_mcp/tools/: collections_manifest.json  collections_stats.json  (+1 more)
output/os_mcp/: os_cherry_config.json  os_mcp_server.py  test_os_mcp.py
output/pathlib_mcp/: pathlib_cherry_config.json
output/plotly_mcp/: plotly_cherry_config.json  plotly_mcp_server.py
output/seaborn_mcp/: seaborn_cherry_config.json  seaborn_mcp_server.py  test_seaborn_mcp.py
output/shutil_mcp/: shutil_cherry_config.json  shutil_mcp_server.py
output/zipfile_mcp/: zipfile_cherry_config.json  zipfile_mcp_server.py
src/lib2mcp/: __init__.py  __main__.py  cli.py  config.py  converter.py  exceptions.py  query_manager.py
src/lib2mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_detailed_analysis.py  test_full_process.py  test_network_search.py  test_search_analysis.py
(+31 files in other folders)
